--- a/dotfiles/visual-studio-code/settings.json
+++ b/dotfiles/visual-studio-code/settings.json
@@ -1,4 +1,7 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "editor.fontFamily": "'SF Mono', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 14,
   "editor.lineHeight": 21,
@@ -8,12 +11,16 @@
     "editor.rulers": [ 50, 72 ]
   },
   "editor.tabSize": 2,
+  "eslint.alwaysShowStatus": true,
+  "eslint.format.enable": true,
+  "eslint.validate": [ "javascript", "javascriptreact", "vue" ],
   "explorer.openEditors.visible": 0,
   "files.eol": "\n",
   "files.insertFinalNewline": true,
   "terminal.integrated.fontFamily": "'SF Mono Powerline', 'Courier New', monospace",
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.lineHeight": 1.2,
+  "vetur.validation.template": false,
   "workbench.colorCustomizations": {
     "terminal.foreground": "#839496",
     "terminal.background": "#002833",
@@ -38,5 +45,4 @@
   },
   "workbench.iconTheme": "file-icons",
   "workbench.startupEditor": "none",
-  "workbench.tips.enabled": false
 }
