Patch format of EditorConfig and Gitignore
Patch format of the `.editorconfig` and `.gitignore` files.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,20 +3,25 @@
 # below.
 * text eol=lf
 
+################################################################################
 # Source Code
+################################################################################
 
 *.js              text
 *.sh              text
 
+################################################################################
 # Configs
+################################################################################
 
 .editorconfig     text         export-ignore
 .gitattributes    text         export-ignore
 .gitignore        text         export-ignore
 .keep             text         export-ignore
 
+################################################################################
 # Documentation
+################################################################################
 
 *.md              text
-LICENCE           text         export-ignore
-README.md         text         export-ignore
+LICENCE           text
