--- a/dotfiles/visual-studio-code/settings.json
+++ b/dotfiles/visual-studio-code/settings.json
@@ -6,7 +6,7 @@
   "editor.fontSize": 14,
   "editor.lineHeight": 21,
   "editor.minimap.enabled": false,
-  "editor.rulers": [ 80 ],
+  "editor.rulers": [ 80, 120 ],
   "[git-commit]": {
     "editor.rulers": [ 50, 72 ]
   },
