--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 ################################################################################
 
 *.js              text
+*.json            text
 *.sh              text
 
 ################################################################################
