--- a/dotfiles/windows/visual-studio-code/settings.json
+++ b/dotfiles/windows/visual-studio-code/settings.json
@@ -3,8 +3,8 @@
     "source.fixAll.eslint": true
   },
   "editor.fontFamily": "'SF Mono', Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontWeight": "300",
   "editor.fontSize": 14,
+  "editor.fontWeight": "300",
   "editor.lineHeight": 21,
   "editor.minimap.enabled": false,
   "editor.rulers": [ 80, 120 ],
@@ -20,7 +20,7 @@
   "explorer.openEditors.visible": 0,
 
   "files.associations": {
-    ".env.*.local": "dotenv"
+    ".env.*.local": "dotenv",
   },
   "files.eol": "\n",
   "files.insertFinalNewline": true,
@@ -28,6 +28,7 @@
   "terminal.integrated.fontFamily": "'SF Mono Powerline', 'Courier New', monospace",
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.lineHeight": 1.2,
+  "terminal.integrated.shell.windows": "C:\\Windows\\System32\\wsl.exe",
 
   "workbench.colorCustomizations": {
     "terminal.foreground": "#839496",
@@ -50,7 +51,7 @@
     "terminal.ansiBrightYellow": "#657b83",
     "terminalCursor.foreground": "#839496",
     "terminalCursor.background": "#003541"
-  },
+    },
   "workbench.iconTheme": "file-icons-mac",
   "workbench.startupEditor": "none",
   "workbench.tips.enabled": false,
